# household-app

./: .gitignore  LICENSE  README.md  deploy.sh  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: docker.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  roborock_setup.py
backend/app/: main.py
backend/app/core/: auth.py  config.py  database.py
backend/app/models/: calendar.py  houseplant.py  meal.py  recipe.py  shopping.py  vacuum.py
backend/app/routers/: calendar.py  houseplants.py  meals.py  recipes.py  shopping.py  vacuum.py
backend/app/services/: ics_sync.py  roborock.py  vacuum_scheduler.py
backend/tests/: test_roborock.py
frontend/: gen-icons.mjs  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: Modal.tsx  SettingsSidebar.tsx  Toast.tsx
frontend/src/pages/: Calendar.tsx  Home.tsx  Houseplants.tsx  Meals.tsx  Recipes.tsx  Shopping.tsx
frontend/src/styles/: global.css
